--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,8 +25,10 @@
 
 <app-child [item]="data"></app-child>
 
-<h2>Reuseable Component</h2>
+<h1>Reuseable Component</h1>
 <ul *ngFor="let item of userDetails">
   <app-user-details [details]="item"></app-user-details>
-
 </ul>
+
+<h1>Th2 data is here: {{childData}}</h1>
+<app-child-data2 (getDataEvent)="getChildData($event)"></app-child-data2>
