Directives and basic of Reactive forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,3 +50,6 @@
 
 <h1>Reactive Form </h1>
 <app-reactive-form></app-reactive-form>
+
+<h1>Directives =Are classes that gives additional features to </h1>
+<p appRedEl>Here wewill be using a costom directive named as redEl</p>
